# legends_of_code

backend/: pyproject.toml
backend/scripts/: cli.py
backend/src/backend/: game_eng.py  main.py  schemas.py
backend/src/backend/routers/: maps.py  players.py
bruno/loc/: add player.bru  bruno.json  get players.bru  move player.bru  print map.bru
frontend/: package-lock.json  package.json
frontend/src/lib/: Game.svelte
frontend/src/routes/: +page.svelte
